apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Accept-Encoding "";
      proxy_set_header Host $host;
spec:
  ingressClassName: nginx
  tls:
    - secretName: wildcard-tls
      hosts:
        - home.brettswift.com
  rules:
    - host: home.brettswift.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
